# pg_no_seqscan

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  pg_no_seqscan.control  rustfmt.toml
.github/workflows/: ci_pr_tests.yml
src/: guc.rs  helpers.rs  hooks.rs  lib.rs
tests/pg_regress/: load_expected_overrides
tests/pg_regress/expected/: advanced_plan_nodes.out  append.out  append.out.pg18  append_1.out  basic_seqscan.out  bitmap_and.out  bitmap_or.out  complex_queries.out  cte.out  explain.out  explain.out.pg18  explain_1.out  join.out  join.out.pg18  join_1.out  partitioning.out  select_sequence.out  sequence.out  settings_check_databases.out  settings_databases.out  settings_level.out  settings_schema.out  settings_table.out  settings_user.out  setup.out  skip_comments.out  subpartitioning.out  subpartitioning.out.pg18  subpartitioning_1.out  subquery.out  subquery.out.pg18  subquery_1.out  update_subquery.out  using_index.out  view.out
tests/pg_regress/sql/: advanced_plan_nodes.sql  append.sql  basic_seqscan.sql  bitmap_and.sql  bitmap_or.sql  complex_queries.sql  cte.sql  explain.sql  join.sql  partitioning.sql  select_sequence.sql  sequence.sql  settings_check_databases.sql  settings_databases.sql  settings_level.sql  settings_schema.sql  settings_table.sql  settings_user.sql  skip_comments.sql  subpartitioning.sql  subquery.sql  update_subquery.sql  using_index.sql  view.sql
